--- a/app/src/main/res/layout/notification_activity.xml
+++ b/app/src/main/res/layout/notification_activity.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/notification"
+    android:background="@color/aspire_cream_background"
     >
 
     <com.example.app.ui.customeview.AppBarView
@@ -15,11 +16,25 @@
         />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/lstNotification"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintTop_toBottomOf="@+id/app_bar"
         android:layout_margin="20dp"
+        android:visibility="gone"
+        />
+
+    <TextView
+        android:id="@+id/textNotification"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/app_bar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginVertical="20dp"
+        android:text="Chưa có giao dịch"
+        android:textSize="20dp"
         />
 
     <com.example.app.ui.customeview.NavBarView
