--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-    <color name="aspire_cream_background">#FEF9F0</color>
+    <!--    <color name="aspire_cream_background">#FEF9F0</color>-->
+        <color name="aspire_cream_background">#fff1d6</color>
     <color name="aspire_dark_text">#000000</color> <color name="aspire_light_orange_background">#FBE4C8</color>
     <color name="aspire_orange_primary">#D95D39</color>
 
@@ -14,4 +15,8 @@
 
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
+
+    <color name="aspire_red_transfer">#FF0000</color>
+    <color name="aspire_green_receive">#00cc00</color>
+
 </resources>
